--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -149,7 +149,7 @@
                     <canvas width="100%" height="100%" id="myChart"></canvas>
                 </div>
                 <div class="absolute-center">
-                    <p class="gpa-text"> &mdash; GPA</p>
+                    <p class="gpa-text"> No grades found <i class="far fa-frown-open fa-fw"></i></p>
                     <p class="students-text"> &mdash; Students</p>
                 </div>
             </div>
