Added discord link in footer

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -286,6 +286,11 @@
             <h5>Follow theCourseForum!</h5>
           </li>
           <li class="list-inline-item mr-3">
+            <a href="https://discord.gg/tAjzH7eyvW">
+              <i class="fab fa-discord fa-2x fa-fw"></i>
+            </a>
+          </li>
+          <li class="list-inline-item mr-3">
             <a href="https://www.facebook.com/thecourseforum">
               <i class="fab fa-facebook fa-2x fa-fw"></i>
             </a>
