--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -11,15 +11,16 @@
 
     <div class="course-professor container">
 
-    {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
-    
-    <div class="d-flex flex-column my-3 mt-md-5">
-        <div class="d-md-flex justify-content-center">
-            <h1 class="mr-md-3" style="white-space: nowrap">{{ course.code }} |</h1>
-            <h1 class="mr-md-3">{{ course.title }}</h1>
+        {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
+
+        <div class="d-flex flex-column my-3 mt-md-5">
+            <div class="d-md-flex justify-content-center">
+                <h1 class="mr-md-3" style="white-space: nowrap">{{ course.code }} |</h1>
+                <h1 class="mr-md-3">{{ course.title }}</h1>
+            </div>
+            <h2 class="text-center mb-3"><a
+                    href="{% url 'instructor' instructor_id=instructor.id %}">{{ instructor.full_name }}</a></h2>
         </div>
-        <h2 class="text-center mb-3"><a href="{% url 'instructor' instructor_id=instructor.id %}">{{ instructor.full_name }}</a></h2>
-    </div>
 
 
         <div class="grades-ratings-container mb-5 ">
