--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -209,7 +209,7 @@
                 </div>
                 <div class="form-group">
                   <label for="inputMessage">Feedback</label>
-                  <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..."></textarea>
+                  <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..."required></textarea>
                 </div>
               </div>
             </div>
