Added dynamic titles

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}About - theCourseForum{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" href="{% static 'about/about.css' %}" />
 {% endblock %}
