--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}{{breadcrumbs.1.0}} - theCourseForum{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" href="{% static 'department/department.css' %}" />
 <link rel="stylesheet" href="{% static 'common/rating_card.css' %}" />
