--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>theCourseForum</title>
+    <title>{% block title %}theCourseForum{% endblock %}</title>
     <link rel="icon"
       type="image/png"
       href="{% static 'base/img/new_logo.png' %}">
