--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}Browse by Department - theCourseForum{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" href="{% static 'browse/browse.css' %}" />
 {% endblock %}
