--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}{{instructor.full_name}} - theCourseForum{% endblock %}
+
 {% block styles %}
 <link rel="stylesheet" href="{% static 'common/rating_card.css' %}"/>
 <link rel="stylesheet" href="{% static 'common/show-hide.css' %}"/>
