--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}My Profile - theCourseForum{% endblock %}
+
 {% block styles %}
 {% endblock %}
 
