Added more dynamic titles

--- a/tcf_website/templates/about/privacy.html
+++ b/tcf_website/templates/about/privacy.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}Privacy - theCourseForum{% endblock %}
+
 {% block styles %}
 {% endblock %}
 
