--- a/tcf_website/templates/about/terms.html
+++ b/tcf_website/templates/about/terms.html
@@ -1,6 +1,8 @@
 {% extends "base/base.html" %}
 {% load static %}
 
+{% block title %}Terms - theCourseForum{% endblock %}
+
 {% block styles %}
 {% endblock %}
 
