--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -176,6 +176,55 @@
 
   </section>
 
+  <section class="faqs py-5 my-5">
+    <div class="row px-md-4">
+      <div class="faqs-header col-md-10 mx-auto">
+        <h2 class="mb-4">FAQs </h2>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse1"> Why did you switch to tCF 2.0? </h5>
+        <p id="collapse1" class="collapse show"> The previous version of the site was developed using the Ruby on
+          Rails framework 8 years ago. That's a long time in tech years!
+          theCourseForum2 is a sleeker python rewrite that'll make it easier
+          for us to maintain and develop new features. </p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse2">Where did (insert removed feature) go?</h5>
+        <p id="collapse2" class="collapse"> During the rewrite, some features had to be left out due to and
+          low usage. If you'd like to propose an old or new feature, submit
+          a feedback form or join the discussion on our
+          <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse3"> Do you profit from people using the site? </h5>
+        <p id="collapse3" class="collapse"> No, our site is entirely made by volunteer students for students!!! </p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse4"> How can I join the team? </h5>
+        <p id="collapse4" class="collapse"> We’re planning to do a round of recruitment for both dev team and
+          design team in Winter 2020! Stay tuned for the application. </p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse5"> What does the dev team do? </h5>
+        <p id="collapse5" class="collapse"> Our dev team develops & maintains the site! </p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse6"> What does the design team do? </h5>
+        <p id="collapse6" class="collapse"> Our design team works on UI & publicity </p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse7"> Where should I report bugs or leave a comment? </h5>
+        <p id="collapse7" class="collapse"> Fill out the feedback/report a bug forms on the site or
+          join our
+          <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
+      </div>
+      <div class="col-md-10 mx-auto">
+        <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse8"> Where does your grade data come from? </h5>
+        <p id="collapse8" class="collapse"> VA Grades </p>
+      </div>
+    </div>
+  </section>
+
   <!-- Feedback Form -->
   <section class="feedback container py-5 mb-5">
       <div class="row text-center">
