--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -254,11 +254,11 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="inputTitle">Title</label>
-                  <input type="text" class="form-control" id="inputTitle" placeholder="Message Subject">
+                  <input type="text" class="form-control" id="inputTitle" placeholder="Message Subject" required>
                 </div>
                 <div class="form-group">
                   <label for="inputMessage">Feedback</label>
-                  <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..."required></textarea>
+                  <textarea type="text" class="form-control" id="inputMessage" rows="6" placeholder="Write your message here..." required></textarea>
                 </div>
               </div>
             </div>
