Change course title to code only and added more titles

--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% load static %}
 
-{% block title %}Browse by Department - theCourseForum{% endblock %}
+{% block title %}Browse - theCourseForum{% endblock %}
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'browse/browse.css' %}" />
