--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 {% load static %}
 
-{% block title %}{{course.title}} - theCourseForum{% endblock %}
+{% block title %}{{course.code}} - theCourseForum{% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="{% static 'course/course.css' %}"/>
