Hide upvotes on mobile and fixed wrapping on mobile

--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -90,7 +90,7 @@ footer > .row {
 
 .form-control {
   background-color: var(--background-color);
-  color: var(--background-color);
+  color: black;
   border-color: transparent;
 }
 
