Put FAQs in white box

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -176,12 +176,12 @@
 
   </section>
 
-  <section class="faqs py-5 my-5">
-    <div class="row px-md-4">
-      <div class="faqs-header col-sm-10 col-11 mx-auto">
-        <h2 class="mb-4">FAQs</h2>
+  <section class="faqs features-icons px-md-4 mx-4 mb-5">
+    <div class="card row mx-md-4 py-4">
+      <div class="faqs-header col-11 mx-auto">
+        <h2 class="mb-4 text-tcf-orange">FAQs</h2>
       </div>
-      <div class="faqs-content col-sm-10 col-11 mx-auto">
+      <div class="faqs-content col-11 mx-auto">
       <div class="row">
         <div class="col-md-6 mx-auto">
           <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse1"> <i class="fas fa-chevron-down"></i> Why did you switch to tCF 2.0? </h5>
@@ -200,7 +200,7 @@
         <div class="col-md-6 mx-auto">
           <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse3"> <i class="fas fa-chevron-down"></i> Do you profit from people using the site? </h5>
           <p id="collapse3" class="collapse"> No, our site is entirely a volunteer effort. This has been a subject of confusion
-              in the past, so to be clear: <b>we have never and will never make money from the site.</b> We get our money from
+              in the past, so to be clear: <i>We have never and will never make money from the site.</i> We get our money from
               university grants, sponsors, and donations from users like you!</p>
         </div>
         <div class="col-md-6 mx-auto">
