Moved FAQs to json

--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -178,57 +178,50 @@
 
   <section class="faqs features-icons px-md-4 mx-4 mb-5">
     <div class="card row mx-md-4 py-4">
+
       <div class="faqs-header col-11 mx-auto">
         <h2 class="mb-4 text-tcf-orange">FAQs</h2>
       </div>
+
       <div class="faqs-content col-11 mx-auto">
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse1"> <i class="fas fa-chevron-down"></i> Why did you switch to tCF 2.0? </h5>
-          <p id="collapse1" class="collapse show"> The previous version of the site was developed using the Ruby on
-            Rails framework 8 years ago. That's a long time in tech years! Not many of our student developers know
-              Ruby anymore, so we decided to rebuild the site from scratch with Django, a popular Python web framework that is also taught in UVA's
-              CS 3240 (Advanced Software Development). What this means for you is that it'll become easier for us in the long term to
-              maintain the site and develop new features. </p>
+        <div class="row">
+          {% for item in FAQs %}
+          <div class="col-md-6 mb-3">
+            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-{{forloop.counter}}">
+              <i class="fas fa-chevron-down"></i> {{ item.question }} </h5>
+            <p id="faq-{{forloop.counter}}" class="collapse"> {{ item.answer }} </p>
+          </div>
+          {% endfor %}
+          <!-- These questions have hyperlinks and cannot be in the JSON file -->
+          <div class="col-md-6 mb-3">
+            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-prevfeature">
+              <i class="fas fa-chevron-down"></i> Where did [previous feature] go?</h5>
+            <p id="faq-prevfeature" class="collapse">
+              During the rewrite, some features had to be left out due to low
+              usage. If you'd like to propose we bring one of them back, or
+              suggest an entirely new feature, submit a feedback form or join
+              the discussion on our
+              <a href='https://discord.gg/tAjzH7eyvW' class='text-tcf-blue'>Discord server</a>!
+            </p>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-privacy">
+              <i class="fas fa-chevron-down"></i> How do you protect reviewers' privacy?</h5>
+            <p id="faq-privacy" class="collapse">
+              We will never display your name on reviews, nor release this
+              information to anyone. Read our
+              <a href="{% url 'privacy' %}" class='text-tcf-blue'>Privacy Policy</a> to learn more!
+            </p>
+          </div>
+          <div class="col-md-6 mb-3">
+            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-reportbugs">
+              <i class="fas fa-chevron-down"></i> Where should I report bugs or leave a comment?</h5>
+            <p id="faq-reportbugs" class="collapse">
+              Fill out the feedback form or report a bug form on the site or join our
+              <a href='https://discord.gg/tAjzH7eyvW' class='text-tcf-blue'>Discord server</a>!
+            </p>
+          </div>
         </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse2"><i class="fas fa-chevron-down"></i> Where did (insert previous feature) go?</h5>
-          <p id="collapse2" class="collapse"> During the rewrite, some features had to be left out due to low usage.
-              If you'd like to propose we bring one of them back, or suggest an entirely new feature, submit a feedback form or join the discussion on our
-            <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse3"> <i class="fas fa-chevron-down"></i> Do you profit from people using the site? </h5>
-          <p id="collapse3" class="collapse"> No, our site is entirely a volunteer effort. This has been a subject of confusion
-              in the past, so to be clear: <i>We have never and will never make money from the site.</i> We get our money from
-              university grants, sponsors, and donations from users like you!</p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse4"> <i class="fas fa-chevron-down"></i> How can I join the team? </h5>
-          <p id="collapse4" class="collapse"> We’re planning to do a round of recruitment for both our dev team and
-            design team in Winter 2020! Stay tuned for details on how to apply. </p>
-        </div>
-
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse5"> <i class="fas fa-chevron-down"></i> What does the dev team do? </h5>
-          <p id="collapse5" class="collapse"> Our dev team develops and maintains the site! </p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse6"><i class="fas fa-chevron-down"></i> What does the design team do? </h5>
-          <p id="collapse6" class="collapse"> Our design team works on UI design and publicity, getting the word out about theCourseForum. </p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse7"> <i class="fas fa-chevron-down"></i> Where should I report bugs or leave a comment? </h5>
-          <p id="collapse7" class="collapse"> Fill out the feedback/report a bug forms on the site or
-            join our
-            <a href="https://discord.gg/tAjzH7eyvW" class="text-tcf-blue">Discord server</a>!</p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#collapse8"> <i class="fas fa-chevron-down"></i> Where does your grade data come from? </h5>
-          <p id="collapse8" class="collapse"> Our data is official, completely anonymous grade data from UVA! Don't worry, nobody will find out about the D you got in MATH 1200.</p>
-        </div>
-
-      </div>
       </div>
 
     </div>
