--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -210,6 +210,18 @@
 
       <div class="faqs-content col-11 mx-auto">
         <div class="row">
+          <!-- These questions have hyperlinks and cannot be in the JSON file -->
+          <div class="col-md-6 mb-3">
+            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-prevfeature">
+              <i class="fas fa-chevron-down"></i> Where did [previous feature] go?</h5>
+            <p id="faq-prevfeature" class="collapse">
+              During our tCF2.0 rewrite, some features had to be left out due to
+              low usage. If you'd like to propose we bring one of them back, or
+              suggest an entirely new feature, submit a feedback form or join
+              the discussion on our
+              <a href='https://discord.gg/tAjzH7eyvW' class='text-tcf-blue'>Discord server</a>!
+            </p>
+          </div>
           {% for item in FAQs %}
           <div class="col-md-6 mb-3">
             <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-{{forloop.counter}}">
@@ -218,17 +230,6 @@
           </div>
           {% endfor %}
           <!-- These questions have hyperlinks and cannot be in the JSON file -->
-          <div class="col-md-6 mb-3">
-            <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-prevfeature">
-              <i class="fas fa-chevron-down"></i> Where did [previous feature] go?</h5>
-            <p id="faq-prevfeature" class="collapse">
-              During the rewrite, some features had to be left out due to low
-              usage. If you'd like to propose we bring one of them back, or
-              suggest an entirely new feature, submit a feedback form or join
-              the discussion on our
-              <a href='https://discord.gg/tAjzH7eyvW' class='text-tcf-blue'>Discord server</a>!
-            </p>
-          </div>
           <div class="col-md-6 mb-3">
             <h5 class="hover-tcf-orange" data-toggle="collapse" data-target="#faq-privacy">
               <i class="fas fa-chevron-down"></i> How do you protect reviewers' privacy?</h5>
