google analytics site tag

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -34,6 +34,16 @@
 
 
 {% block basejs %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MS4QJTK01Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MS4QJTK01Z');
+</script>
+
 <!-- Menu Toggle Script -->
 <script>
   /*
