Implemented GPA data on instructor page

--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -55,7 +55,7 @@
                                 <i class="fa fa-chart-bar"></i> GPA
                             </small>
                             <p class="h3" id="gpa">
-                                TODO
+                                {{ avg_gpa }}
                             </p>
                         </li>
                     </ul>
@@ -96,7 +96,7 @@
                             <i class="fa fa-chart-bar"></i> GPA
                         </small>
                         <p class="h4" id="gpa">
-                            TODO
+                            {{ course.avg_gpa }}
                         </p>
                     </li>
                     <div class="col">
