Removed comment link

--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -14,9 +14,9 @@
                     <h4 class="card-title">
                         No Reviews <i class="far fa-frown-open fa-fw"></i>
                     </h4>
-                    <p class="card-text">
+                    <!-- <p class="card-text">
                         Help us out by <a href="{% url 'new_review' %}" style="color: dodgerblue;">writing a review!</a>
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
