Comment out more URL stuff

--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -15,7 +15,7 @@
                         No Reviews <i class="far fa-frown-open fa-fw"></i>
                     </h4>
                     <!-- <p class="card-text">
-                        Help us out by <a href="{% url 'new_review' %}" style="color: dodgerblue;">writing a review!</a>
+{#                        Help us out by <a href="{% url 'new_review' %}" style="color: dodgerblue;">writing a review!</a>#}
                     </p> -->
                 </div>
             </div>
